--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,8 @@
-enable_disqus: false
-enable_analytics: false
+enable_analytics: true
 highlighter: rouge
 permalink: pretty
 
-#_url: http://localhost:4000
-#_url: https://flaviomicheletti.github.io/logica-de-programacao
-_url: http://www.devfuria.com.br/logica-de-programacao
-
-secao: logica-de-programacao
+dominio: devfuria.com.br
 
 defaults:
   -
